Mispelling fixed, fixed issue with about me when viewing on mobile

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -33,10 +33,12 @@
     h1 {
       font-size: 3rem;
       line-height: 20px;
-      @include media(">=tablet", "<desktop") {
+      @include media(">=phone", "<desktop") {
         text-align: center;
+        line-height: 45px;
       }
     }
+   
     p {
       @include media(">=tablet", "<desktop") {
         text-align: center;
